[tool.poetry]
name = "steropeswp4"
version = "0.1.0"
description = "This code is developed for the WP4 of the Steropes project. The main goal of this code is to segment the vegetation from RGB images"
authors = ["Mohammadmehdi Saberioon"]
license = "EUPL-1.2 license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
