[tool.poetry]
name = "steropeswp4"
version = "1.0.2"
description = "This code is developed for the WP4 of the Steropes project. The main goal of this code is to segment the vegetation from RGB images"
authors = ["Mohammadmehdi Saberioon"]
license = "EUPL-1.2 license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.3"
matplotlib = "^3.7.1"
scikit-fuzzy = "^0.4.2"
opencv-python = "^4.7.0.72"
scikit-learn = "^1.2.2"
scikit-image = "^0.20.0"
tqdm = "^4.66.1"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
